--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@
   </div>
 </div>
 <!-- Start of akasupportcenter Zendesk Widget script -->
-<script id="ze-snippet" src="./Nội thất Nhà Xinh _ Nội thất cao cấp _ Đồ gỗ cao cấp_files/snippet.js.download"></script>
+<script id="ze-snippet" src="./js/snippet.js"></script>
 <!-- End of akasupportcenter Zendesk Widget script -->
 <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
